--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CardGameForTest">
-        <activity android:name=".Activity.SettingsActivity"></activity>
+        <activity android:name=".Activity.WinActivity"></activity>
+        <activity android:name=".Activity.SettingsActivity" />
         <activity android:name=".Activity.GameActivity" />
         <activity android:name=".Activity.MainActivity">
             <intent-filter>
