--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,21 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
-        android:name="com.shumslav.cardgamefortest.AFApplication"
+        android:name=".AFApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CardGameForTest">
+        <service
+            android:name=".Services.CheckStatus"
+            android:enabled="true"
+            android:exported="true"></service>
 
         <activity android:name=".Activity.LoadScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -31,20 +36,21 @@
         <activity
             android:name=".Activity.LoginActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/Theme.CardGameForTest.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.CardGameForTest.NoActionBar"></activity>
         <activity android:name=".Activity.WinActivity" />
         <activity android:name=".Activity.SettingsActivity" />
         <activity android:name=".Activity.GameActivity" />
-        <activity android:name=".Activity.MainActivity">
-        </activity>
+        <activity android:name=".Activity.MainActivity"></activity>
 
         <service android:name=".Data.Firebase.CloudMessages.cardGameFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <receiver android:name="com.appsflyer.SingleInstallBroadcastReceiver" android:exported="true">
+
+        <receiver
+            android:name="com.appsflyer.SingleInstallBroadcastReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
