--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".AFApplication"
@@ -13,11 +14,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CardGameForTest">
-        <service
-            android:name=".Services.CheckStatus"
-            android:enabled="true"
-            android:exported="true"></service>
+        android:theme="@style/Theme.CardGameForTest"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
 
         <activity android:name=".Activity.LoadScreen">
             <intent-filter>
